# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.73 2005/03/01 06:42:39 agaffney Exp $

*GLI-gtkfe-0.01 (11 Dec 2004)

  1 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Quick fix to empty the fifo

  17 Feb 2005; John Laliberte <allanonl@bu.edu>
  ExtraPackages.py - Added a lot of UI reaction details.  It now
  reacts in a reasonable way that users will expect. Added support
  for each section to have "default" packages selected when you
  select the category.

  16 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added PartitioningMain which has a gtk.Notebook for Partitioning and
  PartitioningUgly (will be renamed). PartitioningMain calls activate()
  in child screens. Ugly screen is auto-selected if partition tables
  can't be read

  06 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added GRP checkbox in Stage.py

  01 Feb 2005; John Laliberte <allanonl@bu.edu>
  ExtraPackages.py - Added class Details.  Large portions updated so
  that there is now a tree structure of packages associated with each
  section and category. Many visual changes to the screen.

  31 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Changed vertical spacing for install steps. Removed "Install" activation
  if profile is loaded. Bottom buttons are dynamically generated. Cleaned up
  unneeded code from Partitioning.py

  30 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Deleting and recreating swap doesn't cause nastiness anymore. Switched
  to dynamically creating color key blocks. Made "whole disk" display taller
  to begin with. Fixed primary/logical checking in PartProperties.py

  29 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Shell for partition properties dialog. Added "working" Ok and Cancel
  buttons to PartProperties.py. Began moving code from Partitioning.py
  to PartProperties.py. Lots more code moved. All editing functionality
  moved to PartProperties.py
