@@ -1,8 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.73 2005/03/01 06:42:39 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.74 2005/03/05 20:49:00 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  5 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Entry fields and slider in PartProperties.py now sync with each other.
+  Sliding the slider will update the entry fields and changing an entry
+  field will update the slider and the other entry field.
 
   1 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Quick fix to empty the fifo
